--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello</title>
+	<meta charset="utf-8" />
+	<title>Test</title>
 </head>
 <body>
-
-	<h1>Introduction</h1>
-
 
 </body>
 </html>
