--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Hello</title>
-</head>
-<body>
-
-	<h1>Test Hello</h1>
-	<p>Hi </p>
-
-
-</body>
+  <head>
+    <title>Hello</title>
+  </head>
+  <body>
+    <h1>Wwelcome Laravel</h1>
+    <p>Hi</p>
+  </body>
 </html>
